Argh image issues, thought I fixed these

--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -107,7 +107,7 @@ section.section-article.container-gray-5.text-center
   .row.align-center
     .columns.small-12.large-10
       h3.headline-4 One REST API for all your connections
-      img.img-crisp.lozad alt=("One REST API for all your connections") data-background-image="/public/img/platform-one-api-diagram.png" /
+      img.img-crisp.lozad alt=("One REST API for all your connections") data-src="/public/img/platform-one-api-diagram.png" /
 section.section-article
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
