--- a/source/partials/section-promos/_tco-guide-ribbon.erb
+++ b/source/partials/section-promos/_tco-guide-ribbon.erb
@@ -5,7 +5,7 @@ else
     grayValue = "11"
 end
 %>
-<section class="lozad section-article--med container-image--center container-gray-<%= grayValue %>" <% if defined?(bgImage) ? bgImage : '' %> data-src="<%= bgImage %><%= image_featured_medium %>, medium], [<%= bgImage %>?fit=thumb&w=2200&h=500&fm=jpg&q=70"<% end %>>
+<section class="lozad section-article--med container-image--center container-gray-<%= grayValue %>" <% if defined?(bgImage) ? bgImage : '' %> data-background-image="<%= bgImage %>?fit=thumb&w=1800&h=500&fm=jpg&q=70"<% end %>>
     <div class="row align-center">
         <div class="columns small-12 medium-1 large-1 text-center">
             <%= inline_svg("icon-dollar-circle", class: "svg-color--white icon-size--large") %>
