⚡️ Hmm lozad'ing a wistia script... seems to work! DHSF fixes

--- a/source/dhsf/index.html.erb
+++ b/source/dhsf/index.html.erb
@@ -23,7 +23,7 @@ customJS: "/public/js/dhsf.js"
         </div>
         <div class="row align-center">
             <div class="columns small-12 large-10 group">
-                <script src="https://fast.wistia.com/embed/medias/kl98fd2faa.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_kl98fd2faa seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+                <script class="lozad" data-src="https://fast.wistia.com/embed/medias/kl98fd2faa.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_kl98fd2faa seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
             </div>
         </div>
         <div class="row align-center">
@@ -205,7 +205,7 @@ customJS: "/public/js/dhsf.js"
                 </div>
                 <div class="group text-center">
                     <a href="https://datica.com/guide/digital-health-success-framework-ebook/" title="Download your ebook">
-                        <img src="https://images.ctfassets.net/189dvqdsjh46/2q4JydYcuAgSQ6SKmy88US/47ce92d94666f955ab2ef252297fa838/dhsf-report-preview.png?w=500" alt="DHSF Ebook" class="group">
+                        <img data-src="https://images.ctfassets.net/189dvqdsjh46/2q4JydYcuAgSQ6SKmy88US/47ce92d94666f955ab2ef252297fa838/dhsf-report-preview.png?w=500" alt="DHSF Ebook" class="lozad group">
                     </a>
                     <!-- <h3 class="headline-4">Get your free DHSF ebook</h3> -->
                     <a class="button hollow hollow-inverted" href="/guide/digital-health-success-framework-ebook/" title="Download your ebook">Get your free DHSF ebook today</a>
