CKS: Much-improved background blending, better feature detection, new artwork, responsive work.

--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -202,6 +202,9 @@ $underline: false !default;
     background-image: -o-linear-gradient($args);
     background-image: linear-gradient($args);
 }
+// @function gradient-prefixes($args...){
+//     @return -webkit-linear-gradient($args), -o-linear-gradient($args), linear-gradient($args);
+// }
 
 @mixin clip-path($a, $b, $c, $d){
     -webkit-clip-path: polygon($a, $b, $c, $d);
