--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -18,8 +18,9 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
     symbol#icon-chevron-down viewbox=("0 0 18 18")
       title chevron-down
       path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z")
-.container-color--dark-grad-blue
-  section#platform-top.section-article.container-image--top.bg-blend-overlay.product-cks-bg.lozad(data-background-image="https://images.ctfassets.net/189dvqdsjh46/47HWdSLHTOSiowmkyqqEey/15b3b6d4a4740f0ad50094061cf2ac7c/cks-bridge-bw2.jpg")
+.container-gray-3
+  section#platform-top.section-article.product-cks-bg
+    / section#platform-top.section-article.container-image--top.bg-blend-overlay.product-cks-bg.lozad(data-background-image="https://images.ctfassets.net/189dvqdsjh46/47HWdSLHTOSiowmkyqqEey/15b3b6d4a4740f0ad50094061cf2ac7c/cks-bridge-bw2.jpg")
     / .row
     /   .columns.small-12
     /     h1.headline-1 Compliant Kubernetes<sup>&reg;</sup> Service is how regulated industries work with cloud native architectures.
