--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -26,14 +26,13 @@ aside.hide-for-large.section-article.container-color--blue-alt.menu.button-clust
     .row.align-center
       .columns.small-12.medium-12.large-7.text-center.group
         = inline_svg("icon-integration", class: "icon-size--xlarge svg-color--gray-4")
-        h1.headline-3.text-light Datica CKS is the complete toolset to handle <strong>compliant, scalable, secure data exchange</strong> with any EHR or clinical system
+        h1.headline-3.text-light Datica Compliant Managed Integration (CMI) is the complete toolset to handle <strong>compliant, scalable, secure data exchange</strong> with any EHR or clinical system
     .row.align-middle.group
       .columns.small-12.large-5
         .callout.drop
-          p <strong>Full-Stack</strong> Data Integration
-          p The mature integration stack considers HIPAA compliance, data security, redundant backups, and no reliance on blackbox proprietary APIs as core ingredients to a successful integration strategy.
-          p Don't get caught with infrastructure gotchas as you go from zero-to-one or if you are preparing to scale to hundreds of integrations. Instead, get Datica CMI. Included in our data integration application:
-            strong Instead, get Datica.
+          h3.headline-4.text-light <strong>Full-Stack</strong> Data Integration
+          p The mature integration stack considers HIPAA compliance, data security, redundant backups, and no reliance on black box proprietary APIs as core ingredients to a successful integration strategy.
+          p Don't get caught with infrastructure gotchas as you go from zero-to-one or if you are preparing to scale to hundreds of integrations. Instead, get Datica CMI.
           p
             strong Included in our data integration application:
           ul
@@ -77,7 +76,7 @@ section.section-article
     .columns
       .callout.callout--stretch.callout--gray-light
         h4.headline-5 True scalability
-        p With a toolset on Datica's compliant cloud infrastructure, integrations scale as you scale.
+        p With a toolset on Datica CKS, integrations scale as you scale.
     .columns
       .callout.callout--stretch.callout--gray-light
         h4.headline-5 HIPAA compliant infrastructure
@@ -112,7 +111,7 @@ section.section-article
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
       h3.headline-3 Datica Integration Solutions
-      p.lead Datica's approach to integration has helped a wide range of solutions across the entire spectrum of healthcare, with applications in the following industries:
+      p.lead Datica's approach to integration has helped a wide range of solutions across the entire spectrum of healthcare:
   .row.align-center.align-middle
     .columns.small-12.large-10.xlarge-8.multicol-3
       ul
