--- a/source/assets/scss/seldon.scss
+++ b/source/assets/scss/seldon.scss
@@ -90,3 +90,5 @@
 
 // overrides should compile last - useful place to put overrides in the ITCSS pyramid. Use sparingly!
 @import 'modules/overrides';
+@import 'modules/forms-hubspot'; // overrides of HS styles
+
