--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -48,8 +48,8 @@ priority: "1.0"
                 p Integrating with sites is always point-to-point. We are here to provide project management of a site integration from start to finish over a 30-day project plan.
               #cta.columns.small-12.medium-large-6
                 .callout.pad.drop.form-embed.nomargin.pricing-form
-                  h3.headline-4.text-center.group Request Pricing
-                  p.text-small Thank you for your interest in our suite of products built to help digital health succeed. One of our Datica experts will reach out to you shortly.
+                  h3.headline-4.text-center Request Pricing
+                  p Thank you for your interest in our suite of products built to help digital health succeed. One of our Datica experts will reach out to you shortly.
                   - the_form = data.site.forms['pdrdbrjyUKoooYI8EUAYw']
                   = Kramdown::Document.new(the_form["custom_form"]).to_html
 
