Headline product name fix

--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -27,7 +27,7 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
     .row.group
       .columns.small-12.medium-10.large-8
         .group--2x
-          h2.headline-2 Datica <strong>bridges security and compliance</strong> with Kubernetes to offer an enterprise-grade cloud native solution.
+          h2.headline-2 Datica Compliant Kubernetes<sup>&reg;</sup> Service (CKS) <strong>bridges security and compliance</strong> with Kubernetes to offer an enterprise-grade cloud native solution.
           = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "#cta", :button_classes => "button button--light", :icon => "icon-chevron-down", :item_id => "cta_top_success" }
     .row.group--2x.align-middle
       .columns.small-12.medium-8.large-7
