Redirects, various post-launch fixes. Removing old hosting pages

--- a/source/partials/snippets/_product-req-bar.slim
+++ b/source/partials/snippets/_product-req-bar.slim
@@ -17,7 +17,7 @@ section#productHelp.section-article.container-gray-11.container-image--center da
                     = current_link_to menu_child.title, menu_child.url, title: menu_child.desc, class: ""
                     p.text-small = menu_child.desc
                 li
-                  = current_link_to "Public Roadmap", "/compliance/roadmap", title: "View our public roadmap.", class: ""
+                  = current_link_to "Public Roadmap", "/compliant-kubernetes-service/roadmap/", title: "View our public roadmap.", class: ""
                   p.text-small See what we're building.
     .column.small-12.medium-8.large-4.large-order-1
       a.card.card-add-feature.container-gray-6 data-toggle="requestFeature"
