--- a/source/partials/scripts/_google-tm-head.erb
+++ b/source/partials/scripts/_google-tm-head.erb
@@ -1,5 +1,6 @@
+<%# 
 <!-- Hiding this GTM snippet, to see if Netlify can inject the dataLayer. Injected before end of /head, may not be high enough. -->
-<%# Google Tag Manager, GA Optimize 
+Google Tag Manager, GA Optimize %>
 <script>
     dataLayer = [{
         currentBranch: '{{ BRANCH }}'
@@ -10,8 +11,8 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-MVXG5LZ');
 </script>
-%>
-<%# Google Tag Manager, GA Optimize
+
+<%# Google Tag Manager, GA Optimize %>
 <script>
     (function(w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -28,4 +29,3 @@
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-MVXG5LZ');
 </script>
- %>
