--- a/source/partials/scripts/_google-tm-head.erb
+++ b/source/partials/scripts/_google-tm-head.erb
@@ -12,7 +12,7 @@ Google Tag Manager, GA Optimize %>
 	})(window,document,'script','dataLayer','GTM-MVXG5LZ');
 </script>
 
-<%# Google Tag Manager, GA Optimize %>
+<%# Google Tag Manager, GA Optimize
 <script>
     (function(w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -29,3 +29,4 @@ Google Tag Manager, GA Optimize %>
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-MVXG5LZ');
 </script>
+ %>
