--- a/source/contact/index.html.slim
+++ b/source/contact/index.html.slim
@@ -1,19 +1,15 @@
 ---
-title: "Ask us about Azure Support for Datica Compliant Kubernetes Service"
-summary: "Datica bridges security, compliance and your favorite technologies together to offer a complete, enterprise cloud solution for regulated industries."
+title: "Contact Us"
+summary: "Connect with a compliance or integration expert at Datica"
 author: "Datica, Inc."
-tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Azure, Kubernetes, Microsoft"
-date: "May 7, 2018"
-ogType: "product"
-collectionName: "azure"
+tags: "HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 layout: basic
 ---
-
 ruby:
     current_page.data.share_image = image_share_platform
     current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
-    the_form = data.site.forms['74dF6UYfkIegKgo2akQA2i']
-    the_quote = data.site.quotes['Y1SJiOGUaysQKC0qYE4cQ']
+    the_form = data.site.forms['6REeio0W88ac0o0GOsMs8U']
+    the_quote = data.site.quotes['566EA4HZFumwUQQ6asKQYw']
 
 
 .container-color--dark-grad-blue
@@ -21,7 +17,7 @@ ruby:
     section.section-article
         .row.align-center.align-middle
             .columns.small-12.medium-large-6.large-5.group--2x
-                h1.headline-2 Achieve <strong>continous compliance</strong> with Kubernetes<sup>&reg;</sup> on Azure.
+                h1.headline-2 Connect with Datica
                 .group
                     blockquote.quote--serif.quote--light
                         = Kramdown::Document.new(the_quote["quote_body"]).to_html
