--- a/source/contact/azure.html.slim
+++ b/source/contact/azure.html.slim
@@ -3,7 +3,6 @@ title: "Ask us about Azure Support for Datica Compliant Kubernetes Service"
 summary: "Datica bridges security, compliance and your favorite technologies together to offer a complete, enterprise cloud solution for regulated industries."
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Azure, Kubernetes, Microsoft"
-date: "May 7, 2018"
 ogType: "product"
 collectionName: "azure"
 layout: basic
@@ -15,34 +14,35 @@ ruby:
     the_form = data.site.forms['74dF6UYfkIegKgo2akQA2i']
     the_quote = data.site.quotes['Y1SJiOGUaysQKC0qYE4cQ']
 
-
 .container-color--dark-grad-blue
     = partial "partials/head/header", :locals => { :style => "light" }
     section.section-article
         .row.align-center.align-middle
-            .columns.small-12.medium-large-6.large-5.group--2x
-                h1.headline-2 Achieve <strong>continous compliance</strong> with Kubernetes<sup>&reg;</sup> on Azure.
-                .group
-                    blockquote.quote--serif.quote--light
-                        = Kramdown::Document.new(the_quote["quote_body"]).to_html
-                    = partial("partials/snippets/person", :locals => { :p => the_quote. customer, :company => the_quote.customer.company_name, :classes => "text-white" })
-            #contact-form.columns.small-12.medium-large-6.large-4
+            #contact-form.columns.small-12.medium-large-6.large-4.medium-large-order-2
+                h2.headline-2.hide-for-medium-large.group.text-center Achieve <strong>continous compliance</strong> with Kubernetes<sup>&reg;</sup> on Azure.
                 .callout.drop
                     p A compliance and integration expert from Datica will follow up to learn how we might be able to help.
                     hr/
                     = Kramdown::Document.new(the_form["custom_form"]).to_html
+            .columns.small-12.medium-large-6.large-5.group--2x.medium-large-order-1
+                h1.headline-2.show-for-medium-large Achieve <strong>continous compliance</strong> with Kubernetes<sup>&reg;</sup> on Azure.
+                .group
+                    blockquote.quote--serif.quote--light
+                        = Kramdown::Document.new(the_quote["quote_body"]).to_html
+                    = partial("partials/snippets/person", :locals => { :p => the_quote. customer, :company => the_quote.customer.company_name, :classes => "text-white" })
 .strip-bright
-script type='application/ld+json'
-    javascript:
-        {
-            "@context": "http://schema.org",
-            "@type": "Organization",
-            "url": "#{site_url}",
-            "contactPoint": [
-                { "@type": "ContactPoint",
-                    "telephone": "#{company_phone}",
-                    "contactType": "sales",
-                    "availableLanguage": "English"
-                }
-            ]
-        }
+
+| <script type='application/ld+json'>
+    {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "url": "#{site_url}",
+        "contactPoint": [
+            { "@type": "ContactPoint",
+                "telephone": "#{company_phone}",
+                "contactType": "sales",
+                "availableLanguage": "English"
+            }
+        ]
+    }
+</script>
