--- a/source/contact/index.html.slim
+++ b/source/contact/index.html.slim
@@ -11,34 +11,35 @@ ruby:
     the_form = data.site.forms['6REeio0W88ac0o0GOsMs8U']
     the_quote = data.site.quotes['566EA4HZFumwUQQ6asKQYw']
 
-
 .container-color--dark-grad-blue
     = partial "partials/head/header", :locals => { :style => "light" }
     section.section-article
         .row.align-center.align-middle
-            .columns.small-12.medium-large-6.large-5.group--2x
-                h1.headline-2 Connect with Datica
-                .group
-                    blockquote.quote--serif.quote--light
-                        = Kramdown::Document.new(the_quote["quote_body"]).to_html
-                    = partial("partials/snippets/person", :locals => { :p => the_quote. customer, :company => the_quote.customer.company_name, :classes => "text-white" })
-            #contact-form.columns.small-12.medium-large-6.large-4
+            #contact-form.columns.small-12.medium-large-6.large-4.medium-large-order-2
+                h2.headline-2.hide-for-medium-large.group.text-center Connect with Datica
                 .callout.drop
                     p A compliance and integration expert from Datica will follow up to learn how we might be able to help.
                     hr/
                     = Kramdown::Document.new(the_form["custom_form"]).to_html
+            .columns.small-12.medium-large-6.large-5.group--2x.medium-large-order-1
+                h1.headline-2.show-for-medium-large Connect with Datica
+                .group
+                    blockquote.quote--serif.quote--light
+                        = Kramdown::Document.new(the_quote["quote_body"]).to_html
+                    = partial("partials/snippets/person", :locals => { :p => the_quote. customer, :company => the_quote.customer.company_name, :classes => "text-white" })
 .strip-bright
-script type='application/ld+json'
-    javascript:
-        {
-            "@context": "http://schema.org",
-            "@type": "Organization",
-            "url": "#{site_url}",
-            "contactPoint": [
-                { "@type": "ContactPoint",
-                    "telephone": "#{company_phone}",
-                    "contactType": "sales",
-                    "availableLanguage": "English"
-                }
-            ]
-        }
+
+| <script type='application/ld+json'>
+    {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "url": "#{site_url}",
+        "contactPoint": [
+            { "@type": "ContactPoint",
+                "telephone": "#{company_phone}",
+                "contactType": "sales",
+                "availableLanguage": "English"
+            }
+        ]
+    }
+</script>
