Partialized json-ld; simplifying .logo-size-- classes; some global image improvements

--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -23,29 +23,29 @@ layout: company
             <div class="callout drop">
                 <div class="block">
                     <h4 class="inline-highlight">Why We Exist</h4>
-                    <h2>Solving Compliance on the Cloud</h2>
+                    <h2 class="headline-3">Solving Compliance on the Cloud</h2>
                     <p>The complexity of compliance on the cloud is holding back the adoption of cloud native technology in highly regulated industries. By removing compliance as a concern, we do our part to help propel technology transformation in industries that lag behind.</p>
                 </div>
                 <div class="block">
                     <h4 class="inline-highlight">What We Are</h4>
-                    <h2>The Most Secure and Compliant Kubernetes Cluster Possible</h2>
+                    <h2 class="headline-3">The Most Secure and Compliant Kubernetes Cluster Possible</h2>
                     <p>The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and your application. In another words, the operating system layer of cloud native architectures. We solve that by making Kubernetes perfectly compliant to the standards of global compliance regimes.</p>
                 </div>
                 <div class="block">
-                    <img class="hitrust-logo" src="https://images.ctfassets.net/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png" alt="HITRUST Logo">
                     <h4 class="inline-highlight">How We Do It</h4>
-                    <h2>Best Practices are Best Practices</h2>
+                    <h2 class="headline-3">Best Practices are Best Practices</h2>
+                    <img class="logo-size--large float-right lozad" data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/6438fbb76abda83deac6b9c810745891/hitrust-logo.svg" alt="HITRUST Certified" />
                     <p>By mapping the very best compliance management frameworks, like the HITRUST CSF, to the requirements of other global regimes, we give customers a compliance story across geographies. We started with HIPAA in 2013, tackling the requirements of the most conservative and highest regulated industry on the cloud, and have expanded since then.</p>
                 </div>
                 <div class="block">
-                    <img class="hlseven-logo" src="https://images.ctfassets.net/189dvqdsjh46/5iceTCKPTaG608mQqyY4YC/ea3d524a5e1788cadf61a0474ae6d446/cncf-stacked-color.png" alt="CNCF Logo">
                     <h4 class="inline-highlight">How We Create Value</h4>
-                    <h2>Compliance Breeds Innovation</h2>
+                    <h2 class="headline-3">Compliance Breeds Innovation</h2>
+                    <img class="logo-size--large float-right lozad" src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" alt="Cloud native computing foundation">
                     <p>When regulated organizations have a handle on their cloud compliance program, they can innovate at the speed necessary to keep pace with the competition. It's a disruptive world out there, and the cloud gives companies an edge. Controlling compliance on the cloud is a step towards avoiding disruption.</p>
                 </div>
                 <div class="block">
                     <h4 class="inline-highlight">What We Believe</h4>
-                    <h2>Trust Is Earned</h2>
+                    <h2 class="headline-3">Trust Is Earned</h2>
                     <ul>
                         <li>Compliance moves at the speed of trust.</li>
                         <li>Transparency is how complex subjects, like HIPAA or GDPR, become easier to understand. We're trusted because we're transparent.</li>
@@ -170,10 +170,10 @@ layout: company
         <div class="columns small-12 medium-8 text-center">
             <h2 class="headline-3">A Strong Backing</h2>
             <div class="row small-up-2 medium-up-4 align-middle">
-                <div class="column"><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=60" alt="Arthur Ventures"></div>
-                <div class="column"><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=60" alt="Baird Ventures"></div>
-                <div class="column"><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=60" alt="Chicago Ventures"></div>
-                <div class="column"><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=60" alt="Lewis and Clark Ventures"></div>
+                <div class="column"><img class="logo-size--large img-crisp lozad" data-src="https://images.ctfassets.net/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=120" alt="Arthur Ventures"></div>
+                <div class="column"><img class="logo-size--large img-crisp lozad" data-src="https://images.ctfassets.net/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=120" alt="Baird Ventures"></div>
+                <div class="column"><img class="logo-size--large img-crisp lozad" data-src="https://images.ctfassets.net/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=120" alt="Chicago Ventures"></div>
+                <div class="column"><img class="logo-size--large img-crisp lozad" data-src="https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=120" alt="Lewis and Clark Ventures"></div>
             </div>
         </div>
     </div>
