--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -151,7 +151,7 @@ section#cta.section-article.container-color--gray-dark-grad
             h4.person-name Jon Pearce
             p.person-title CEO, Zipnosis
     #form.columns.small-12.medium-large-6.large-4
-      .callout.drop.form-embed
+      .callout.drop
         - the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
         / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
         = Kramdown::Document.new(the_form["custom_form"]).to_html
