--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -210,7 +210,7 @@ section#cta.section-article.container-color--gray-dark-grad
       /  hr/
       /  = partial("partials/snippets/form-hubspot", :locals => { :form_id => "2904bae4-9c64-4ed7-95a5-9af6ae6af302" })
     #form.columns.small-12.medium-large-6.large-4
-      .callout.drop.form-embed
+      .callout.drop
         - the_form = data.site.forms['328pNB4IvCaQWQMCWmgSCy']
         h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
         = Kramdown::Document.new(the_form["custom_form"]).to_html
