--- a/source/contentful_templates/blog.html.erb
+++ b/source/contentful_templates/blog.html.erb
@@ -152,6 +152,6 @@ end
         </div>
     </section>
 <% end %>
-
+<%= partial "partials/snippets/json-ld-article" %>
 <%# this script injects an alignment class in embedded tweets onDOMready.%>
 <%= partial "partials/content/tweet-styling" %>
