--- a/source/partials/snippets/_json-ld-contact.erb
+++ b/source/partials/snippets/_json-ld-contact.erb
@@ -2,10 +2,10 @@
     {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "url": "#{site_url}",
+        "url": "<%= site_url %>",
         "contactPoint": [
             { "@type": "ContactPoint",
-                "telephone": "#{company_phone}",
+                "telephone": "<%= company_phone %>",
                 "contactType": "sales",
                 "availableLanguage": "English"
             }
